--- a/01-github-explorer/public/index.html
+++ b/01-github-explorer/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DocGithub Explorar</title>
+  <title>Github Explorar</title>
 </head>
 <body>
 
